Fix dark mode bug

--- a/frontend/styles/cg.scss
+++ b/frontend/styles/cg.scss
@@ -43,6 +43,14 @@ $height: 4rem;
 $margin: 2rem;
 $radius: 0.6rem;
 
+/* Shadows */
+$bs-diffused-4: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
+  0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+
+/** QERQ*/
+$bs-diffused-3: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
+  0 4px 4px rgba(0, 0, 0, 0.16);
+
 /* Vanilla CSS Variables
  * For Light / Dark Mode Switching Dynamically (since SASS is pre-processed)
 /* ---------------------------------------------------------- */
@@ -50,6 +58,9 @@ $radius: 0.6rem;
   --clr-primary: #{$clr-light};
   --clr-secondary: #{$clr-dark};
 }
+
+/* Mixins
+/* ---------------------------------------------------------- */
 
 /* Reset
 /* ---------------------------------------------------------- */
@@ -250,6 +261,7 @@ button,
 select {
   text-transform: none;
 }
+
 button,
 html input[type='button'],
 input[type='reset'],
@@ -267,30 +279,38 @@ input::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
-input {
-  line-height: normal;
-}
-input:focus {
-  outline: none;
-}
-input[type='checkbox'],
-input[type='radio'] {
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-  height: auto;
-}
-input[type='search'] {
-  box-sizing: content-box;
 
-  -webkit-appearance: textfield;
+input {
+  border: none;
+  line-height: normal;
+
+  &:focus {
+    outline: none;
+  }
+
+  &[type='checkbox'],
+  &[type='radio'] {
+    box-sizing: border-box;
+    padding: 0;
+  }
+
+  &[type='number']::-webkit-inner-spin-button,
+  &[type='number']::-webkit-outer-spin-button {
+    height: auto;
+  }
+
+  &[type='search'] {
+    box-sizing: content-box;
+
+    -webkit-appearance: textfield;
+  }
+
+  &[type='search']::-webkit-search-cancel-button,
+  &[type='search']::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
 }
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+
 legend {
   padding: 0;
   border: 0;
@@ -334,17 +354,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: 'liga' on;
-  &.dark {
-    --clr-primary: #{$clr-dark};
-    --clr-secondary: #{$clr-light};
-  }
 }
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: var(--clr-secondary);
-    color: var(--clr-primary);
-  }
+.dark {
+  --clr-primary: #{$clr-dark};
+  --clr-secondary: #{$clr-light};
 }
 
 ::selection {
@@ -532,7 +545,7 @@ h5 {
 
 h6 {
   margin: 1.5em 0 0.5em 0;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 500;
 }
 
@@ -709,7 +722,7 @@ h6 {
     top: 65px;
     right: 0;
     left: 0;
-    background-color: inherit;
+    background-color: var(--clr-primary);
 
     //Smooth Transition
     height: 0;
@@ -759,6 +772,15 @@ h6 {
   margin: 10em 0 10em 0;
 }
 
+.header {
+  text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  margin: 5em 0 5em 0;
+}
+
 /* Interactives
 /* ---------------------------------------------------------- */
 
@@ -772,11 +794,23 @@ button.cta {
   }
 }
 
-.input--searchbar {
+input[type='text'] {
+  border-radius: 15px;
 }
 
-/* Index
+.input--searchbar {
+  box-shadow: $bs-diffused-3;
+  font-size: 1.2em;
+  padding: 1em 1em 1em 1em;
+  width: 100%;
+}
+
+/* Cards
 /* ---------------------------------------------------------- */
+
+.card {
+  margin: 3em 0;
+}
 
 /* Pagination
 /* ---------------------------------------------------------- */
